--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@ animation__f9_move="dur:10000-;from: 108 -70 68;to:108 1000 68;loop:-1;property:
 ></a-entity>
 
 <!-- Camera Controls -->
-		<a-entity id="CAMERACONTROL" position="-300 -60 -100" rotation="0 -120 0">		<!---300 -60 -100 = optimal for viewing-->
+		<a-entity id="CAMERACONTROL" position="-300 -60 -100" rotation="0 -120 0" >		<!---300 -60 -100 = optimal for viewing-->
 		<a-camera id="CAMERACONTROL1" wasd-controls="acceleration: 1000">
-
+			
 			<a-entity cursor="fuse:true; fuseTimeout: 2000" geometry="primitive: sphere; radius:0.005"
+			raycaster="objects: .clickable"
+
 				material="color:white;" position="0 0 -1" animation__enter="property: scale; to: 3 3 3;
 			dur:2000;
 			easing:linear;
@@ -54,6 +56,8 @@ animation__f9_move="dur:10000-;from: 108 -70 68;to:108 1000 68;loop:-1;property:
 		<a-entity gltf-model="#ireland" scale="30 30 30" position="0 -150 0"></a-entity>
 		<!--1st step - sword moves falcon 9 model-->
 		<a-entity gltf-model="#sword" id="sword_name" scale="10 10 10" position="-210 -40 -40" rotation="0 -120 0"
+		class="clickable"
+
 		event-set__movefalcon9="_event: click; _target:#falcon_9; position:-130 10 -40;"
 		event-set__movesword="_event: click; _target:#sword_name; position:-600 200 -40;"
 		event-set__guidetextdisappear="_event: click; _target:#guidetext1; position:-600 200 -40;"
@@ -70,6 +74,7 @@ animation__f9_move="dur:10000-;from: 108 -70 68;to:108 1000 68;loop:-1;property:
 		<!--2nd step - Clicking on Joystick Moves Falcon 9 to almost landed position-->
 
 		<a-entity id="f9_js" gltf-model="#joystick" scale="5 5 5" position="-210 -4000 -40"
+		class="clickable"
 		event-set__movef9_1st="_event: click; _target:#falcon_9; position:108 -10 68.710;"
 		event-set__joystickgone="_event: click; _target:#f9_js; position:108 -10000 68.710;"
 		event-set__joysticktxtgone="_event: click; _target:#jstxt; position:108 -10000 68.710;"
@@ -96,11 +101,13 @@ animation__f9_move="dur:10000-;from: 108 -70 68;to:108 1000 68;loop:-1;property:
 		<a-entity id="question1entity" visible="false">
 		<a-entity id="q1txt" text="value: In what year did SpaceX have their first mission? (Answer to land the ship) Red - 1999 | Green - 2003 | Blue - 2009; color: white" scale="50 50 50" position="112 -40 68" rotation="0 0 0"></a-entity>
 		<a-box id="QBox_1" color="#AA0000" position="103 -50 68" scale="3 3 3"
+		class="clickable"
 		event-set__wrong01="_event: click; _target:#bx_1txt; position:103 -50 68;"
 		event-set__box01_disappear="_event: click; _target:#QBox_1; position:103 -700 68;"
 		></a-box>
 
 		<a-box id="QBox_2" color="#00AA00" position="108 -50 68" scale="3 3 3"
+		class="clickable"
 		event-set__q1_answer="_event: click; _target:#falcon_9; position:108 -70 68.710;"
 		event-set__textgone="_event: click; _target:#q1txt; position:108 -600 68.710;"
 		event-set__q1gone="_event: click; _target:#QBox_1; position:108 -600 68.710;"
@@ -114,6 +121,7 @@ animation__f9_move="dur:10000-;from: 108 -70 68;to:108 1000 68;loop:-1;property:
 		></a-box>
 
 		<a-box id="QBox_3" color="#0000AA" position="113 -50 68" scale="3 3 3"
+		class="clickable"
 		event-set__wrong03="_event: click; _target:#bx_3txt; position:150 -50 68;"
 		event-set__box03_disappear="_event: click; _target:#QBox_3; position:103 -700 68;"
 		></a-box>
@@ -123,6 +131,7 @@ animation__f9_move="dur:10000-;from: 108 -70 68;to:108 1000 68;loop:-1;property:
 
 	<!-- Find the computer-->
 	<a-entity id="lostcomputer" gltf-model="#computer" scale="0.1 0.1 0.1" position="108 -700 68.710;"
+	class="clickable"
 	event-set__computertxtgone="_event: click; _target:#findthepart; position:-300 1500 -100;"
 	event-set__setcamforlaunch="_event: click; _target:#CAMERACONTROL1; position:300 50 -100; rotation:0 -15 0; "
 	event-set__make_og_false="_event: click; _target:#falcon_9; position:-108 -10000 -50"
